force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/Case_Queue_override_by_type__mdt.object-meta.xml
<CustomObject>
    <description>Mapeo para determinar si hay que elegir la cola de un caso en base a su tipología, por encima de otros criterios.</description>
    <label>Case Queue by Type</label>
    <pluralLabel>Case Queues by Type</pluralLabel>
</CustomObject>