force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <description>Centro o cola a la que asignar el caso en función de la tipología.</description>
    <label>Destino</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email_GSS_Administracion</fullName>
                <default>true</default>
                <label>Email_GSS_Administracion</label>
            </value>
            <value>
                <fullName>Email_GSS_Particulares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>