force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/SourceSubtype__c.field-meta.xml
<CustomField>
    <fullName>SourceSubtype__c</fullName>
    <description>Subtipo del Caso en origen</description>
    <label>Source Subtype</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>