force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <description>Tipo del Caso en origen</description>
    <label>Source Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>