force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Tipo N2 del Caso en Salesforce</description>
    <label>Subtype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anulación</fullName>
                <default>true</default>
                <label>Anulación</label>
            </value>
            <value>
                <fullName>Envíos (Cliente)</fullName>
            </value>
            <value>
                <fullName>Modificación</fullName>
            </value>
            <value>
                <fullName>Rehabilitación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>