force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/Subtype_Description__c.field-meta.xml
<CustomField>
    <fullName>Subtype_Description__c</fullName>
    <description>Descripción del subtipo del caso en origen.</description>
    <label>Subtype Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>