force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo N1 del Caso en Salesforce</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratar mi seguro</fullName>
                <default>true</default>
                <label>Contratar mi seguro</label>
            </value>
            <value>
                <fullName>Gestión Cliente</fullName>
            </value>
            <value>
                <fullName>Gestión Económica</fullName>
            </value>
            <value>
                <fullName>Gestión Mediador</fullName>
            </value>
            <value>
                <fullName>Gestión Servicios</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
            <value>
                <fullName>Modificar mi seguro</fullName>
            </value>
            <value>
                <fullName>No definido</fullName>
            </value>
            <value>
                <fullName>Pago de mi seguro</fullName>
            </value>
            <value>
                <fullName>Renovar mi seguro</fullName>
            </value>
            <value>
                <fullName>Siniestro</fullName>
            </value>
            <value>
                <fullName>Tareas</fullName>
            </value>
            <value>
                <fullName>Validar mi seguro</fullName>
            </value>
            <value>
                <fullName>Venta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>