force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/TypeDescription__c.field-meta.xml
<CustomField>
    <fullName>TypeDescription__c</fullName>
    <description>Descripción del tipo del caso en origen.</description>
    <label>Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>