force-app/zurich-base/main/default/objects/Case_Queue_override_by_type__mdt/fields/TypeN3__c.field-meta.xml
<CustomField>
    <fullName>TypeN3__c</fullName>
    <description>Tipo N3 del Caso en Salesforce</description>
    <label>TypeN3</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anulación</fullName>
                <default>true</default>
                <label>Anulación</label>
            </value>
            <value>
                <fullName>Certificados</fullName>
            </value>
            <value>
                <fullName>Datos Bancarios</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>